testdata/good/before/comp/index.tw
<ul>
    @component("user", { name: "Anna", age: 27 })@end
    @component("section")Box content@end
</ul>