testdata/bad/unknown-default-pass/index.tw
@component("book", { title: "Harry Potter" })
    <p>Some content is here</p>
@end